--- a/static/main.css
+++ b/static/main.css
@@ -77,3 +77,12 @@
   justify-content: center;
   line-height: 25px;
 }
+
+.pos {}
+.pos__preview {
+  display: block;
+  width: 100px;
+  height: 100px;
+  background-size: contain;
+  background-repeat: no-repeat;
+}
