--- a/templates/cabinet_parts/_left-sidebar.html
+++ b/templates/cabinet_parts/_left-sidebar.html
@@ -179,6 +179,13 @@
                             </ul>
                         </li>
 
+                        <li class="sidebar-item">
+                            <a href="{% url 'promo:pos-materials' %}" class="sidebar-link">
+                                <i class="mdi mdi-email"></i>
+                                <span class="hide-menu">{% trans 'Рекламные материалы' %}</span>
+                            </a>
+                        </li>
+
                     </ul>
                 </li>
 
