--- a/templates/landings/index.html
+++ b/templates/landings/index.html
@@ -106,7 +106,7 @@
         </div>
         <div class="logo__text">
             <p>
-                Footbik Token1
+                Footbik Token
             </p>
         </div>
     </div>
